made navbar fixed at top and prevents from resizing off screen

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -38,6 +38,7 @@ body {
 .overlay {
   background-color: rgba(2, 2, 2, 0.31);
   width: 100%;
+  height: 100vh;
   position: absolute;
   z-index: 1;
   top: 0;
